; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_papr_scm.c_drc_pmem_bind.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_papr_scm.c_drc_pmem_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.papr_scm_priv = type { i64, i32, i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@PLPAR_HCALL_BUFSIZE = common dso_local global i32 0, align 4
@H_SCM_BIND_MEM = common dso_local global i32 0, align 4
@BIND_ANY_ADDR = common dso_local global i32 0, align 4
@H_BUSY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"bound drc 0x%x to %pR\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.papr_scm_priv*)* @drc_pmem_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drc_pmem_bind(%struct.papr_scm_priv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.papr_scm_priv*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.papr_scm_priv* %0, %struct.papr_scm_priv** %3, align 8
  %10 = load i32, i32* @PLPAR_HCALL_BUFSIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %4, align 8
  %13 = alloca i64, i64 %11, align 16
  store i64 %11, i64* %5, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %14

14:                                               ; preds = %34, %1
  %15 = load i32, i32* @H_SCM_BIND_MEM, align 4
  %16 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %17 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %20 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %19, i32 0, i32 4
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @BIND_ANY_ADDR, align 4
  %23 = load i64, i64* %7, align 8
  %24 = call i64 @plpar_hcall(i32 %15, i64* %13, i32 %18, i32 0, i32 %21, i32 %22, i64 %23)
  store i64 %24, i64* %8, align 8
  %25 = getelementptr inbounds i64, i64* %13, i64 0
  %26 = load i64, i64* %25, align 16
  store i64 %26, i64* %7, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %14
  %30 = getelementptr inbounds i64, i64* %13, i64 1
  %31 = load i64, i64* %30, align 8
  store i64 %31, i64* %6, align 8
  br label %32

32:                                               ; preds = %29, %14
  %33 = call i32 (...) @cond_resched()
  br label %34

34:                                               ; preds = %32
  %35 = load i64, i64* %8, align 8
  %36 = load i64, i64* @H_BUSY, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %14, label %38

38:                                               ; preds = %34
  %39 = load i64, i64* %8, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %38
  %42 = load i64, i64* %8, align 8
  %43 = trunc i64 %42 to i32
  store i32 %43, i32* %2, align 4
  store i32 1, i32* %9, align 4
  br label %60

44:                                               ; preds = %38
  %45 = load i64, i64* %6, align 8
  %46 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %47 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %46, i32 0, i32 0
  store i64 %45, i64* %47, align 8
  %48 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %49 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %48, i32 0, i32 3
  %50 = load %struct.TYPE_2__*, %struct.TYPE_2__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 0
  %52 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %53 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %52, i32 0, i32 2
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.papr_scm_priv*, %struct.papr_scm_priv** %3, align 8
  %56 = getelementptr inbounds %struct.papr_scm_priv, %struct.papr_scm_priv* %55, i32 0, i32 1
  %57 = call i32 @dev_dbg(i32* %51, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %54, i32* %56)
  %58 = load i64, i64* %8, align 8
  %59 = trunc i64 %58 to i32
  store i32 %59, i32* %2, align 4
  store i32 1, i32* %9, align 4
  br label %60

60:                                               ; preds = %44, %41
  %61 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %61)
  %62 = load i32, i32* %2, align 4
  ret i32 %62
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @plpar_hcall(i32, i64*, i32, i32, i32, i32, i64) #2

declare dso_local i32 @cond_resched(...) #2

declare dso_local i32 @dev_dbg(i32*, i8*, i32, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
